[package]
name = "hamesh_cli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "hamesh_cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bytes = "1"
futures = "0.3"
h3 = "0.0.4"
h3-quinn = "0.0.5"
http = "1"
quinn = { version = "0.10", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "ring",
] }
rcgen = { version = "0.10" }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6"
structopt = "0.3"
tokio = { version = "1.27", features = ["full"] }
serde_json = "1.0.48"
serde = { version = "1.0.196", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
octets = "0.2.0"

tracing-tree = { version = "0.2" }
rand = "0.8.5"
regex = "1.10.3"
simple_logger = "4.3.3"
log = "0.4.20"
base64 = "0.13.1"
sha256 = "1.5.0"